python-oslo-utils: update to 8.0.0

--- a/mingw-w64-python-oslo-utils/PKGBUILD
+++ b/mingw-w64-python-oslo-utils/PKGBUILD
@@ -4,27 +4,28 @@ _pyname=oslo.utils
 _realname=oslo-utils
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=7.3.0
-pkgrel=2
+pkgver=8.0.0
+pkgrel=1
 pkgdesc="Oslo Utility library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-msys2_references=(
-  'pypi: oslo.utils'
-)
+url='https://docs.openstack.org/oslo.utils/latest'
 msys2_repository_url='https://opendev.org/openstack/oslo.utils/'
 msys2_changelog_url='https://docs.openstack.org/releasenotes/oslo.utils/'
 msys2_documentation_url='https://docs.openstack.org/oslo.utils/latest/'
 msys2_issue_tracker_url='https://bugs.launchpad.net/oslo.utils/'
-url='https://docs.openstack.org/oslo.utils/latest'
+msys2_references=(
+  'pypi: oslo.utils'
+)
 license=('spdx:Apache-2.0')
-depends=("${MINGW_PACKAGE_PREFIX}-python-iso8601"
+depends=("${MINGW_PACKAGE_PREFIX}-python"
+         "${MINGW_PACKAGE_PREFIX}-python-iso8601"
          "${MINGW_PACKAGE_PREFIX}-python-oslo-i18n"
          "${MINGW_PACKAGE_PREFIX}-python-netaddr"
-         "${MINGW_PACKAGE_PREFIX}-python-netifaces"
          "${MINGW_PACKAGE_PREFIX}-python-debtcollector"
-         "${MINGW_PACKAGE_PREFIX}-python-pyparsing"
          "${MINGW_PACKAGE_PREFIX}-python-packaging"
+         "${MINGW_PACKAGE_PREFIX}-python-psutil"
+         "${MINGW_PACKAGE_PREFIX}-python-pyparsing"
          "${MINGW_PACKAGE_PREFIX}-python-tzdata"
          "${MINGW_PACKAGE_PREFIX}-python-yaml")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
@@ -35,7 +36,7 @@ checkdepends=("${MINGW_PACKAGE_PREFIX}-python-oslotest"
               "${MINGW_PACKAGE_PREFIX}-python-ddt"
               "${MINGW_PACKAGE_PREFIX}-python-eventlet")
 source=("https://pypi.org/packages/source/${_realname::1}/${_pyname}/${_pyname}-${pkgver}.tar.gz")
-sha256sums=('59a5d3e4e7bbc78d801ccebc2b823e429b624c12bb6e3b6e76f71c29f2bf21df')
+sha256sums=('906fcf1c86f671f224c1925b2a8d375a0539143fb6158b13e202a79dd8e6c694')
 
 build() {
   # Set version for pbr
