--- a/mingw-w64-python-et-xmlfile/PKGBUILD
+++ b/mingw-w64-python-et-xmlfile/PKGBUILD
@@ -3,39 +3,37 @@
 _realname=et-xmlfile
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-pkgver=1.1.0
-pkgrel=5
+pkgver=2.0.0
+pkgrel=1
 pkgdesc="A low memory library for creating large XML files (mingw-w64)"
-url="https://et-xmlfile.readthedocs.io/"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url="https://et-xmlfile.readthedocs.io/"
 msys2_references=(
   'pypi: et-xmlfile'
 )
-license=('MIT')
-depends=("${MINGW_PACKAGE_PREFIX}-python-lxml")
+license=('spdx:MIT')
+depends=("${MINGW_PACKAGE_PREFIX}-python"
+         "${MINGW_PACKAGE_PREFIX}-python-lxml")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
 source=("https://pypi.python.org/packages/source/e/et_xmlfile/et_xmlfile-${pkgver}.tar.gz"
         "LICENSE")
-sha256sums=('8eb9e2bc2f8c97e37a2dc85a09ecdcdec9d8a396530a6d5a33b30b9a92da0c5c'
+sha256sums=('dab3f4764309081ce75662649be815c4c9081e88f0837825f90fd28317d4da54'
             '69a810ce7342b9198bd2e44d0098e30b4ce31078019e6cf990a5cd6ce2c3f7ce')
 
 prepare() {
   cd "${srcdir}"
-  rm -rf python-build-${CARCH} | true
-  cp -r "et_xmlfile-${pkgver}" "python-build-${CARCH}"
+  rm -rf python-build-${MSYSTEM} | true
+  cp -r "et_xmlfile-${pkgver}" "python-build-${MSYSTEM}"
 }
 
 build() {
-  cd "${srcdir}/python-build-${CARCH}"
+  cd "${srcdir}/python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python setup.py build
 }
 
 package() {
-  cd "${srcdir}/python-build-${CARCH}"
+  cd "${srcdir}/python-build-${MSYSTEM}"
 
   MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
   ${MINGW_PREFIX}/bin/python setup.py install --root=${pkgdir} --prefix=${MINGW_PREFIX} --optimize=1 --skip-build
