--- a/mingw-w64-python-yapf/PKGBUILD
+++ b/mingw-w64-python-yapf/PKGBUILD
@@ -3,17 +3,17 @@
 _realname=yapf
 pkgbase=mingw-w64-python-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-python-${_realname}
-pkgver=0.40.2
-pkgrel=3
+pkgver=0.43.0
+pkgrel=1
 pkgdesc='A formatter for Python files (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://github.com/google/yapf'
 msys2_references=(
   'archlinux: yapf'
   'pypi: yapf'
 )
 license=('spdx:Apache-2.0')
-url='https://github.com/google/yapf'
 depends=(
     "${MINGW_PACKAGE_PREFIX}-python"
     "${MINGW_PACKAGE_PREFIX}-python-tomli"
@@ -25,7 +25,7 @@ makedepends=(
     "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 options=(!strip)
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('4dab8a5ed7134e26d57c1647c7483afb3f136878b579062b786c9ba16b94637b')
+sha256sums=('00d3aa24bfedff9420b2e0d5d9f5ab6d9d4268e72afbf59bb3fa542781d5218e')
 
 prepare() {
   cd "${srcdir}"
