python-pystemmer: update to 2.2.0.3

--- a/mingw-w64-python-pystemmer/PKGBUILD
+++ b/mingw-w64-python-pystemmer/PKGBUILD
@@ -4,8 +4,8 @@ _pyname=PyStemmer
 _realname=pystemmer
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=2.2.0.1
-pkgrel=4
+pkgver=2.2.0.3
+pkgrel=1
 pkgdesc="Snowball stemming algorithms, for information retrieval (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -22,14 +22,14 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-libstemmer")
 options=(!strip)
-source=("https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_pyname}-${pkgver}.tar.gz")
-sha256sums=('9f3b366f1ed06b49dc1868bf0aefd884423db80f3431be442d0f993e448cc67b')
+source=("https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('9ac74c8d0f3358dbb050f64cddbb8d55021d831d92305d7c20780ea8d6c0020e')
 
 prepare() {
-  cd "${srcdir}"/${_pyname}-${pkgver}
+  cd "${srcdir}"/${_realname}-${pkgver}
 
   rm -rf "${srcdir}"/python-build-${MSYSTEM} | true
-  cp -r "${srcdir}"/"${_pyname}-${pkgver}" "${srcdir}"/"python-build-${MSYSTEM}"
+  cp -r "${srcdir}"/"${_realname}-${pkgver}" "${srcdir}"/"python-build-${MSYSTEM}"
 }
 
 build() {
