python-click: Update to 8.1.8
and port to build/installer

--- a/mingw-w64-python-click/PKGBUILD
+++ b/mingw-w64-python-click/PKGBUILD
@@ -4,8 +4,8 @@ _realname=click
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-python-${_realname}-docs")
-pkgver=8.1.7
-pkgrel=2
+pkgver=8.1.8
+pkgrel=1
 pkgdesc='A simple wrapper around optparse for powerful command line utilities (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -18,14 +18,17 @@ depends=(
   "${MINGW_PACKAGE_PREFIX}-python"
   "${MINGW_PACKAGE_PREFIX}-python-colorama"
 )
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools"
+makedepends=(
+  "${MINGW_PACKAGE_PREFIX}-python-flit-core"
+  "${MINGW_PACKAGE_PREFIX}-python-build"
+  "${MINGW_PACKAGE_PREFIX}-python-installer"
   "${MINGW_PACKAGE_PREFIX}-python-pallets-sphinx-themes"
   "${MINGW_PACKAGE_PREFIX}-python-sphinxcontrib-log-cabinet"
   "${MINGW_PACKAGE_PREFIX}-python-sphinx-issues"
   "${MINGW_PACKAGE_PREFIX}-python-sphinx-tabs"
 )
 source=("${_realname}-$pkgver.tar.gz::https://github.com/pallets/click/archive/${pkgver}.tar.gz")
-sha512sums=('a1cb115b90193d78f94ec2a6af563b089820517e6e0e4b71ea3d6c68304444d16db3597358c62e1757d9d05449996b7168a220eecde6ab4991367fdb6e74096f')
+sha512sums=('f9f501210d202026a8449df1eef570f5399887a3efda9499d4a4180bbe96bc232809929bf80f9a65037583e84dfa8af3f0c348353c41121c815a9ead2c58d3aa')
 
 prepare() {
   rm -rf "python-build-${MSYSTEM}" | true
@@ -35,13 +38,14 @@ prepare() {
 build() {
   msg "Python build for ${MSYSTEM}"
   cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py build
+
+  python -m build --wheel --skip-dependency-check --no-isolation
 
   # Forward installation for building documentation
   _pkgdir="${srcdir}/python-install-${MSYSTEM}"
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
-    --root="${_pkgdir}" --optimize=1 --skip-build
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${_pkgdir}" dist/*.whl
 
   msg "Build documentation"
   cd "${srcdir}/python-build-${MSYSTEM}/docs"
@@ -53,11 +57,11 @@ build() {
 package_python-click() {
   cd "${srcdir}/python-build-${MSYSTEM}"
 
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
-    --root="${pkgdir}" --optimize=1 --skip-build
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
 
-  install -Dm644 LICENSE.rst "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE.rst"
+  install -Dm644 LICENSE.txt "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE.txt"
 }
 
 package_python-click-docs() {
