python-pint: Update to 0.24.4

--- a/mingw-w64-python-pint/PKGBUILD
+++ b/mingw-w64-python-pint/PKGBUILD
@@ -4,8 +4,8 @@ _pyname=Pint
 _realname=pint
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.24.3
-pkgrel=2
+pkgver=0.24.4
+pkgrel=1
 pkgdesc="Physical quantities module (mingw-w64)"
 arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
@@ -20,6 +20,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-appdirs"
          "${MINGW_PACKAGE_PREFIX}-python-typing_extensions"
          "${MINGW_PACKAGE_PREFIX}-python-flexcache"
+         "${MINGW_PACKAGE_PREFIX}-python-platformdirs"
          "${MINGW_PACKAGE_PREFIX}-python-flexparser")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
@@ -27,7 +28,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools-scm")
 options=('!strip')
 source=("https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('d54771093e8b94c4e0a35ac638c2444ddf3ef685652bab7675ffecfa0c5c5cdf')
+sha256sums=('35275439b574837a6cd3020a5a4a73645eb125ce4152a73a2f126bf164b91b80')
 
 build() {
   export SETUPTOOLS_SCM_PRETEND_VERSION=${pkgver}
