python-jaraco.path: Update to 3.7.2

--- a/mingw-w64-python-jaraco.path/PKGBUILD
+++ b/mingw-w64-python-jaraco.path/PKGBUILD
@@ -1,11 +1,11 @@
 # Maintainer: @naveen521kk on Github, Naveen M K <naveen521kk@gmail.com>
 
-_pyname=jaraco.path
+_pyname=jaraco_path
 _realname=jaraco.path
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=3.7.0
-pkgrel=2
+pkgver=3.7.2
+pkgrel=1
 pkgdesc='miscellaneous path functions (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -22,11 +22,11 @@ makedepends=(
   "${MINGW_PACKAGE_PREFIX}-python-setuptools-scm"
 )
 source=("${_pyname}-${pkgver}.tar.gz::https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_pyname}-${pkgver}.tar.gz")
-sha256sums=('bd55b67bbf53557d1fe1059d27fc4c2652ba1e94451a14f6678235d7703cf650')
+sha256sums=('1263c4bb481002e83a96e9253915b33241ac3e1ed6219a2793d3121f65159107')
 
 prepare() {
   rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_pyname//_/-}-$pkgver" "python-build-${MSYSTEM}"
+  cp -r "${_pyname}-$pkgver" "python-build-${MSYSTEM}"
   export SETUPTOOLS_SCM_PRETEND_VERSION=${pkgver}
 }
 
