--- a/mingw-w64-python-qtpy/PKGBUILD
+++ b/mingw-w64-python-qtpy/PKGBUILD
@@ -1,11 +1,11 @@
 # Maintainer: Sarah Ottinger <schalaalexiazeal@gmail.com>
 
-_pyname=QtPy
+_pyname=qtpy
 _realname=qtpy
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=2.4.1
-pkgrel=4
+pkgver=2.4.2
+pkgrel=1
 pkgdesc='Provides an abstraction layer on top of the various Qt bindings (PyQt5/6 and PySide2/6). (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -26,7 +26,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
 options=(!strip)
 source=("https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_pyname}-${pkgver}.tar.gz"
         001-restore-qtwebkit-support.patch)
-sha256sums=('a5a15ffd519550a1361bdc56ffc07fda56a6af7292f17c7b395d4083af632987'
+sha256sums=('9d6ec91a587cc1495eaebd23130f7619afa5cdd34a277acb87735b4ad7c65156'
             'f93c29bbe11addc2ae56b47c8660d9c8b9ef45b125f5f9c6fb8018ea590da909')
 
 prepare() {
