python-aiohttp: Update to 3.11.11 and update/add required deps

--- a/mingw-w64-python-aiohttp/PKGBUILD
+++ b/mingw-w64-python-aiohttp/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=aiohttp
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=3.9.5
-pkgrel=4
+pkgver=3.11.11
+pkgrel=1
 pkgdesc='HTTP client/server for asyncio (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -22,6 +22,8 @@ depends=("${MINGW_PACKAGE_PREFIX}-python-attrs"
          "${MINGW_PACKAGE_PREFIX}-python-multidict"
          "${MINGW_PACKAGE_PREFIX}-python-yarl"
          "${MINGW_PACKAGE_PREFIX}-python-frozenlist"
+         "${MINGW_PACKAGE_PREFIX}-python-propcache"
+         "${MINGW_PACKAGE_PREFIX}-python-aiohappyeyeballs"
          "${MINGW_PACKAGE_PREFIX}-python-aiosignal")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-python-build"
@@ -37,7 +39,7 @@ checkdepends=("${MINGW_PACKAGE_PREFIX}-python-freezegun"
 "${MINGW_PACKAGE_PREFIX}-python-brotli")
 optdepends=("${MINGW_PACKAGE_PREFIX}-python-brotli: for Brotli transfer-encodings support")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('edea7d15772ceeb29db4aff55e482d4bcfb6ae160ce144f2682de02f6d693551')
+sha256sums=('bb49c7f1e6ebf3821a42d81d494f538107610c3a705987f53068546b0e90303e')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
