--- a/mingw-w64-python-yarl/PKGBUILD
+++ b/mingw-w64-python-yarl/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=yarl
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=1.9.4
-pkgrel=3
+pkgver=1.18.3
+pkgrel=1
 pkgdesc='Yet another URL library (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -15,7 +15,8 @@ msys2_references=(
 license=('spdx:Apache-2.0')
 depends=(
   "${MINGW_PACKAGE_PREFIX}-python-idna"
-  "${MINGW_PACKAGE_PREFIX}-python-multidict")
+  "${MINGW_PACKAGE_PREFIX}-python-multidict"
+  "${MINGW_PACKAGE_PREFIX}-python-propcache")
 makedepends=(
   "${MINGW_PACKAGE_PREFIX}-python-build"
   "${MINGW_PACKAGE_PREFIX}-python-installer"
@@ -27,7 +28,7 @@ checkdepends=(
   "${MINGW_PACKAGE_PREFIX}-python-pytest"
   "${MINGW_PACKAGE_PREFIX}-python-pytest-cov")
 source=("https://github.com/aio-libs/yarl/archive/v${pkgver}/yarl-${pkgver}.tar.gz")
-sha256sums=('d0df8ec8d4d41326406c4c2c27b795a12ace92e5cfcabcf934fa622b36a982f5')
+sha256sums=('4cdb376fa3a747cc2595461b350d87d17b8e4e1c050623db9b9922665ae28360')
 
 prepare() {
   cd "$srcdir"
