ncurses: restore program prefix to avoid conflicts with cygwin variants
a4b0de4a30ac25d50afdc5f108d26 removed the explicitely passed target triplets,
but turns out they were used for the default program prefix by ncurses, resulting
in all the .exe being named "clear.exe" instead of "x86_64-w64-mingw32-clear.exe"
as before.

Since the mingw variants don't seem to work properly this resulted in fallout
(see the linked issues)

Instead of reverting that change, pass the program prefix explicitely, to make this
more clear for the future.

Fixes #23022
Fixes #23032

--- a/mingw-w64-ncurses/PKGBUILD
+++ b/mingw-w64-ncurses/PKGBUILD
@@ -6,7 +6,7 @@ pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 _base_ver=6.5
 _date_rev=20241228
 pkgver=${_base_ver}.${_date_rev}
-pkgrel=2
+pkgrel=3
 pkgdesc="System V Release 4.0 curses emulation library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -53,6 +53,7 @@ build() {
 
   ../${_realname}-${_base_ver}-${_date_rev}/configure \
     --prefix=${MINGW_PREFIX} \
+    --program-prefix="${MINGW_CHOST}-" \
     --mandir=${MINGW_PREFIX}/share/man \
     --with-cxx \
     --with-shared \
