--- a/mingw-w64-libgig/PKGBUILD
+++ b/mingw-w64-libgig/PKGBUILD
@@ -9,6 +9,9 @@ pkgdesc="C++ library for loading, modifying and creating .gig, .dls, .kmp and SF
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.linuxsampler.org/libgig/"
+msys2_references=(
+  'cpe: cpe:2.3:a:linuxsampler:libgig'
+)
 license=('spdx:gpl-2.0-or-later')
 makedepends=("${MINGW_PACKAGE_PREFIX}-autotools"
              "${MINGW_PACKAGE_PREFIX}-cc")
