--- a/mingw-w64-mathjax2/PKGBUILD
+++ b/mingw-w64-mathjax2/PKGBUILD
@@ -11,6 +11,9 @@ arch=(any)
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 pkgdesc='An open source JavaScript display engine for mathematics that works in all modern browsers'
 license=(Apache)
+msys2_references=(
+  'cpe: cpe:2.3:a:mathjax:mathjax'
+)
 source=("$_realname-$pkgver.tar.gz::https://github.com/mathjax/MathJax/archive/$pkgver.tar.gz")
 sha256sums=('c9167279c87da044f2ff910ad573a02ce90354cb59440ae568eb86e1630f65df')
 
