--- a/mingw-w64-ollama/PKGBUILD
+++ b/mingw-w64-ollama/PKGBUILD
@@ -7,6 +7,9 @@ pkgrel=1
 arch=(any)
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_repository_url='https://github.com/ollama/ollama'
+msys2_references=(
+  'cpe: cpe:2.3:a:ollama:ollama'
+)
 url='https://ollama.com'
 license=('spdx:MIT')
 makedepends=(git
