meld3: update to 3.22.3

--- a/mingw-w64-meld3/PKGBUILD
+++ b/mingw-w64-meld3/PKGBUILD
@@ -4,12 +4,13 @@
 _realname=meld
 pkgbase=mingw-w64-${_realname}3
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}3"
-pkgver=3.22.2
-pkgrel=2
+pkgver=3.22.3
+pkgrel=1
 pkgdesc="Visual diff and merge tool (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://meldmerge.org/"
+msys2_repository_url='https://gitlab.gnome.org/GNOME/meld'
 msys2_references=(
   'archlinux: meld'
 )
@@ -29,7 +30,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-itstool")
 source=(https://download.gnome.org/sources/${_realname}/${pkgver%.*}/${_realname}-${pkgver}.tar.xz
         '0001-relocate.patch')
-sha256sums=('46a0a713fbcd1b153b377a1e0757c8ce255c9822467658eacfbd89b1e92316ef'
+sha256sums=('37f7f29eb1ff0fec4d8b088d5483c556de1089f6d018fe6d481993caf2499d84'
             'e7445dd7d7280dfba815909e6e52de3eb549653f5a02c2744a15707c68428332')
 
 prepare() {
