rpi-imager: update to 1.9.0

--- a/mingw-w64-rpi-imager/PKGBUILD
+++ b/mingw-w64-rpi-imager/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=rpi-imager
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=1.8.5
+pkgver=1.9.0
 pkgrel=1
 pkgdesc="Raspberry Pi Imaging Utility (mingw-w64)"
 arch=('any')
@@ -11,6 +11,7 @@ mingw_arch=('ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'archlinux: rpi-imager'
 )
+msys2_repository_url='https://github.com/raspberrypi/rpi-imager/'
 url='https://www.raspberrypi.com/software'
 license=('spdx:Apache-2.0')
 depends=(
@@ -19,9 +20,8 @@ depends=(
   "${MINGW_PACKAGE_PREFIX}-libarchive"
   "${MINGW_PACKAGE_PREFIX}-libwinpthread"
   "${MINGW_PACKAGE_PREFIX}-openssl"
-  "${MINGW_PACKAGE_PREFIX}-qt5-base"
-  "${MINGW_PACKAGE_PREFIX}-qt5-declarative"
-  "${MINGW_PACKAGE_PREFIX}-qt5-winextras"
+  "${MINGW_PACKAGE_PREFIX}-qt6-base"
+  "${MINGW_PACKAGE_PREFIX}-qt6-declarative"
   "${MINGW_PACKAGE_PREFIX}-xz"
   "${MINGW_PACKAGE_PREFIX}-zlib"
   "${MINGW_PACKAGE_PREFIX}-zstd"
@@ -30,20 +30,19 @@ makedepends=(
   "${MINGW_PACKAGE_PREFIX}-cc"
   "${MINGW_PACKAGE_PREFIX}-cmake"
   "${MINGW_PACKAGE_PREFIX}-ninja"
-  "${MINGW_PACKAGE_PREFIX}-qt5-quickcontrols2"
-  "${MINGW_PACKAGE_PREFIX}-qt5-svg"
-  "${MINGW_PACKAGE_PREFIX}-qt5-tools"
+  "${MINGW_PACKAGE_PREFIX}-qt6-svg"
+  "${MINGW_PACKAGE_PREFIX}-qt6-tools"
   "${MINGW_PACKAGE_PREFIX}-winpthreads"
 )
 source=(
   "https://github.com/raspberrypi/rpi-imager/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
-  0001-rpi-imager-cmake-disable-bundled-dependencies.patch
-  0002-rpi-imager-include-missing-header.patch
+  0001-rpi-imager-cmake-disable-bundling.patch
+  remove-vendoring.patch
 )
 noextract=("${_realname}-${pkgver}.tar.gz")
-sha256sums=('443e2ca2132067cc67038c82d890f70fd744da2503588852f014435dd11fb786'
-            '0e4e8e2077b6eb7b1d8f3280f0ccc28c56287dfb7a104b5b25ce30b35ea07fca'
-            '4b8e42ea8c0da8c7bc69b737432811d3acb1e4f2ffbb44358b070bd5c155a081')
+sha256sums=('ed0669b3e59c358a488ba0d23f1ffbbcb61f144ca37d6902a63276055838d694'
+            '4e2813a3ee7ec455b46b554ac0661f6bb4e8c885ff8a1be2b742275123042b72'
+            '81f969072be94494fd8938df850a3dcf71bda7b58268c45bc6b31ed3a79b0d9a')
 
 _apply_patch_with_msg() {
   for _patch in "$@"
@@ -59,8 +58,12 @@ prepare() {
   cd "${_realname}-${pkgver}"
 
   _apply_patch_with_msg \
-    0001-rpi-imager-cmake-disable-bundled-dependencies.patch \
-    0002-rpi-imager-include-missing-header.patch
+    0001-rpi-imager-cmake-disable-bundling.patch
+
+  # https://gitlab.archlinux.org/archlinux/packaging/packages/rpi-imager/-/blob/main/remove-vendoring.patch?ref_type=heads
+  # with 'AND UNIX' condition removed
+  _apply_patch_with_msg \
+    remove-vendoring.patch
 }
 
 build() {
@@ -78,6 +81,7 @@ build() {
       "${_extra_config[@]}" \
       -DENABLE_CHECK_VERSION=OFF \
       -DENABLE_TELEMETRY=OFF \
+      -DENABLE_VENDORING=OFF \
       -S "${_realname}-${pkgver}/src" \
       -B "build-${MSYSTEM}"
 
