xxhash: update to 0.8.3

--- a/mingw-w64-xxhash/PKGBUILD
+++ b/mingw-w64-xxhash/PKGBUILD
@@ -3,22 +3,19 @@
 _realname=xxhash
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.8.2
-pkgrel=2
+pkgver=0.8.3
+pkgrel=1
 pkgdesc="Extremely fast non-cryptographic hash algorithm (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+msys2_repository_url='https://github.com/Cyan4973/xxHash'
 url="https://xxhash.com/"
 license=('spdx:BSD-2-Clause' 'spdx:GPL-2.0-or-later')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-cc")
 source=("${_realname}-${pkgver}.tar.gz::https://github.com/Cyan4973/xxHash/archive/refs/tags/v${pkgver}.tar.gz")
-sha256sums=('baee0c6afd4f03165de7a4e67988d16f0f2b257b51d0e3cb91909302a26a79c4')
-
-prepare() {
-  cd "${srcdir}/${_realname}-${pkgver}"
-}
+sha256sums=('aae608dfe8213dfd05d909a57718ef82f30722c392344583d3f39050c7f29a80')
 
 build() {
   declare -a _extra_config
