unordered_dense: fix download link

--- a/mingw-w64-unordered-dense/PKGBUILD
+++ b/mingw-w64-unordered-dense/PKGBUILD
@@ -5,7 +5,7 @@ _realname=unordered_dense
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=4.5.0
-pkgrel=1
+pkgrel=2
 pkgdesc='A fast & densely stored hashmap and hashset (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -14,7 +14,7 @@ license=('spdx:MIT')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja")
-source=("https://github.com/martinus/${_realname}/archive/v${pkgver}${_realname}-${pkgver}.tar.gz")
+source=("https://github.com/martinus/${_realname}/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
 sha512sums=('f9c819e28e1c1a387acfee09277d6af5e366597a0d39acf1c687acf0608a941ba966af8aaebdb8fba0126c7360269c4a51754ef4cab17c35c01a30215f953368')
 
 build() {
