bat: update to 0.25.0

--- a/mingw-w64-bat/PKGBUILD
+++ b/mingw-w64-bat/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=bat
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.24.0
-pkgrel=6
+pkgver=0.25.0
+pkgrel=1
 pkgdesc="Cat clone with syntax highlighting and git integration (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -26,19 +26,13 @@ makedepends=(
   'git'
 )
 options=('!strip')
-source=("git+${url}.git#tag=v${pkgver}"
-        "update-git2-crate.patch")
-sha256sums=('ccfd1400fba47dbdd839c378fc59b978573b2d651c0b12a8f6b053843ae1012b'
-            'a5daacba88dbe1a327dbd1b6a14c0bf8839279473a8b8dd03bf3fb059ae8844d')
+source=("git+${url}.git#tag=v${pkgver}")
+sha256sums=('d3f4ee9ca8ea0f5927901dc3e41875a1cb68b44959d7b8be0a210010d4434bc5')
 
 prepare() {
   cd "${_realname}"
 
-  # bump git2 crate for libgit2 1.8+ support
-  git apply ../update-git2-crate.patch
-  # update windows-targets to fix windows-gnullvm dependency specification
-  cargo update -p windows-targets@0.48.0 --precise 0.48.1
-
+  cargo update -p cc
   cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
 }
 
