--- a/mingw-w64-rust/PKGBUILD
+++ b/mingw-w64-rust/PKGBUILD
@@ -8,16 +8,16 @@ if [[ $MINGW_PACKAGE_PREFIX == *-clang-* ]]; then
   _bootstrapping=no
 fi
 
-rust_dist_server=https://static.rust-lang.org/dist
-#rust_dist_server=https://dev-static.rust-lang.org/dist/2024-11-25
+#rust_dist_server=https://static.rust-lang.org/dist
+rust_dist_server=https://dev-static.rust-lang.org/dist/2025-01-07
 
 _realname=rust
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-rust-wasm")
          "${MINGW_PACKAGE_PREFIX}-rust-src")
-pkgver=1.83.0
-pkgrel=4
+pkgver=1.84.0
+pkgrel=1
 pkgdesc="Systems programming language focused on safety, speed and concurrency (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -43,21 +43,28 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-zstd"
              "${MINGW_PACKAGE_PREFIX}-zlib")
 source=("${rust_dist_server}/${_realname}c-${pkgver}-src.tar.gz"{,.asc}
+        "cc-1.2.0.tar.gz::https://crates.io/api/v1/crates/cc/1.2.0/download"
         "psm-0.1.24.tar.gz::https://crates.io/api/v1/crates/psm/0.1.24/download"
         "config.toml"
         "0001-rustc-llvm-fix-libs.patch"
         "0004-compiler-Use-wasm-ld-for-wasm-targets.patch"
         "0008-disable-self-contained-for-gnu-targets.patch"
-        "0013-update-psm.patch")
+        # remove after 1.85.0 update
+        "0013-update-psm.patch"
+        "0014-update-cc-for-library.patch"
+        "https://github.com/rust-lang/rust/pull/134240.patch")
 noextract=(${_realname}c-${pkgver}-src.tar.gz)
-sha256sums=('722d773bd4eab2d828d7dd35b59f0b017ddf9a97ee2b46c1b7f7fac5c8841c6e'
+sha256sums=('15cee7395b07ffde022060455b3140366ec3a12cbbea8f1ef2ff371a9cca51bf'
             'SKIP'
+            '1aeb932158bd710538c73702db6945cb68a8fb08c519e6e12706b94263b36db8'
             '200b9ff220857e53e184257720a14553b2f4aa02577d2ed9842d45d4b9654810'
-            'd4253c4b72c789a3a7f276ad75673d8c67c28af76e1d7711919509c667fcfbf8'
+            '9ae64f78af216795bfa31acb8f9a8c2e9ed0e66f61f6565a8b89b58a8dab93b8'
             '7cb1773c288ffb1c1e751edc49b1890c84bf9c362742bc5225d19d474edb73a0'
             '56882f1a0f1404c10c7726d6cc37444f2b343e72b969badfcb43760f80db0f32'
             '98bc3f2bd7371a5b8d14fd7b03bf05574e206d1d9e52bcfbe66d71398504da3c'
-            '602481687fa580eb426c619f673128702c800e91d4f476fcbaf48b86a7a1b963')
+            '602481687fa580eb426c619f673128702c800e91d4f476fcbaf48b86a7a1b963'
+            'c34cfe938681426db215d6cbf42aa0bd6d43d10fba017a40ff0ec09ea9342c40'
+            '58eaf7e10272395e7f23e95a292bd09f1090663b094fbab451a835239cbd3365')
 validpgpkeys=('108F66205EAEB0AAA8DD5E1C85AB96E6FA1BE5FE'  # Rust Language (Tag and Release Signing Key) <rust-key@rust-lang.org>
               '474E22316ABF4785A88C6E8EA2C794A986419D8A'  # Tom Stellard <tstellar@redhat.com>
               'B6C8F98282B944E3B0D5C2530FC3042E345AD05D') # Hans Wennborg <hans@chromium.org>
@@ -89,9 +96,11 @@ prepare() {
   plain "Extracting ${_realname}c-${pkgver}-src.tar.gz"
   tar -xzf ${_realname}c-${pkgver}-src.tar.gz || true
 
-  # use latest version of psm to fix arm4 build
+  # use latest version of psm to fix arm64 build
   rm -r ${_realname}c-${pkgver}-src/vendor/psm-0.1.23
   mv psm-0.1.24 ${_realname}c-${pkgver}-src/vendor/psm-0.1.24
+  # use more fresh version of cc to fix `wasm32v1-none` build
+  mv cc-1.2.0 ${_realname}c-${pkgver}-src/vendor/cc-1.2.0
 
   # 0008-disable-self-contained-for-gnu-targets.patch allows self-contained for non-windows-gnu targets
   cd ${_realname}c-${pkgver}-src
@@ -106,6 +115,16 @@ prepare() {
     apply_patch_with_msg \
       0004-compiler-Use-wasm-ld-for-wasm-targets.patch
   fi
+
+  # partial backport of https://github.com/rust-lang/rust/commit/e00bfa6595ad6809cf91222a6ce902ce11af1f57
+  # to fix compilation for `wasm32v1-none` target
+  apply_patch_with_msg \
+    0014-update-cc-for-library.patch
+
+  # backport of https://github.com/rust-lang/rust/pull/134240 to remove unneded `rust-objcopy.exe`
+  #  from rust sysroot
+  apply_patch_with_msg \
+    134240.patch
 }
 
 build() {
@@ -165,7 +184,12 @@ build() {
 
   # Add target wasm32-*
   if [[ ${CARCH} != i686 ]]; then
-    sed -i '/target = \[/a\  "wasm32-unknown-unknown", "wasm32-wasip1", "wasm32-wasip1-threads", "wasm32-wasip2",' config.toml
+    sed -i '/target = \[/a\  "wasm32-unknown-unknown", "wasm32v1-none", "wasm32-wasip1", "wasm32-wasip1-threads", "wasm32-wasip2",' config.toml
+  fi
+
+  # Enable CFGuard for gnullvm
+  if [[ $MINGW_PACKAGE_PREFIX == *-clang-* ]]; then
+    sed -i "s/^#control-flow-guard/control-flow-guard/g" config.toml
   fi
 
   local -a _rust_build=()
