--- a/mingw-w64-rust/config.toml
+++ b/mingw-w64-rust/config.toml
@@ -2,7 +2,7 @@
 profile = "dist"
 
 # see src/bootstrap/src/utils/change_tracker.rs
-change-id = 131075
+change-id = 133207
 
 [build]
 #cargo = "$MINGW_PREFIX/bin/cargo.exe"
@@ -41,18 +41,19 @@ sysconfdir = "etc"
 #debug = true
 codegen-units-std = 1
 #debuginfo-level-std = 2
-parallel-compiler = false
 channel = "stable"
 description = "Rev$PKGREL, Built by MSYS2 project"
 rpath = false
 frame-pointers = true
 llvm-bitcode-linker = false
 lld = false
+llvm-tools = false
 codegen-tests = false
 deny-warnings = false
 backtrace-on-ice = true
-# FIXME: CFG can be enabled only for MSVC targets as for https://github.com/rust-lang/rust/pull/74103
-# control-flow-guard = true
+# FIXME: CFG can be enabled only for MSVC and LLVM targets as for
+# https://github.com/rust-lang/rust/pull/74103 and https://github.com/rust-lang/rust/pull/132965
+#control-flow-guard = true
 
 [dist]
 compression-formats = ["gz"]
@@ -72,6 +73,17 @@ cxx = "$MINGW_PREFIX/bin/clang++.exe"
 ar = "$MINGW_PREFIX/bin/llvm-ar.exe"
 ranlib = "$MINGW_PREFIX/bin/llvm-ranlib.exe"
 linker = "$MINGW_PREFIX/bin/wasm-ld.exe"
+default-linker = "wasm-ld.exe"
+sanitizers = false
+profiler = false
+
+[target.wasm32v1-none]
+cc = "$MINGW_PREFIX/bin/clang.exe"
+cxx = "$MINGW_PREFIX/bin/clang++.exe"
+ar = "$MINGW_PREFIX/bin/llvm-ar.exe"
+ranlib = "$MINGW_PREFIX/bin/llvm-ranlib.exe"
+linker = "$MINGW_PREFIX/bin/wasm-ld.exe"
+default-linker = "wasm-ld.exe"
 sanitizers = false
 profiler = false
 
@@ -81,6 +93,7 @@ cxx = "$MINGW_PREFIX/bin/clang++.exe"
 ar = "$MINGW_PREFIX/bin/llvm-ar.exe"
 ranlib = "$MINGW_PREFIX/bin/llvm-ranlib.exe"
 linker = "$MINGW_PREFIX/bin/wasm-ld.exe"
+default-linker = "wasm-ld.exe"
 sanitizers = false
 profiler = false
 wasi-root = "$MINGW_PREFIX/share/wasi-sysroot"
@@ -91,6 +104,7 @@ cxx = "$MINGW_PREFIX/bin/clang++.exe"
 ar = "$MINGW_PREFIX/bin/llvm-ar.exe"
 ranlib = "$MINGW_PREFIX/bin/llvm-ranlib.exe"
 linker = "$MINGW_PREFIX/bin/wasm-ld.exe"
+default-linker = "wasm-ld.exe"
 sanitizers = false
 profiler = false
 wasi-root = "$MINGW_PREFIX/share/wasi-sysroot"
@@ -101,6 +115,7 @@ cxx = "$MINGW_PREFIX/bin/clang++.exe"
 ar = "$MINGW_PREFIX/bin/llvm-ar.exe"
 ranlib = "$MINGW_PREFIX/bin/llvm-ranlib.exe"
 linker = "$MINGW_PREFIX/bin/wasm-ld.exe"
+default-linker = "wasm-ld.exe"
 sanitizers = false
 profiler = false
 wasi-root = "$MINGW_PREFIX/share/wasi-sysroot"
