--- a/mingw-w64-python-kiwisolver/PKGBUILD
+++ b/mingw-w64-python-kiwisolver/PKGBUILD
@@ -3,14 +3,11 @@
 _realname=kiwisolver
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 pkgver=1.4.8
 pkgrel=1
 pkgdesc="A fast implementation of the Cassowary constraint solver (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/nucleic/kiwi'
 msys2_references=(
   'pypi: kiwisolver'
@@ -22,7 +19,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-python-cppy"
              "${MINGW_PACKAGE_PREFIX}-cc")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
-source=("${_realname}-${pkgver}.tar.gz::https://github.com/nucleic/kiwi/archive/${pkgver}.tar.gz")
+source=("https://github.com/nucleic/kiwi/archive/${pkgver}/${_realname}-${pkgver}.tar.gz")
 sha256sums=('e8848589c1548a292e99eadc712f14d8924e77f390b7de0a4a5359ee8e4a480f')
 
 prepare() {
