armadillo: rebuild against superlu-7

--- a/mingw-w64-armadillo/PKGBUILD
+++ b/mingw-w64-armadillo/PKGBUILD
@@ -4,7 +4,7 @@ _realname=armadillo
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=14.2.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Fast C++ matrix library with syntax similar to MATLAB and Octave (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -12,19 +12,21 @@ url="https://arma.sourceforge.io/"
 msys2_repository_url="https://gitlab.com/conradsnicta/armadillo-code"
 license=('spdx:Apache-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
+         "${MINGW_PACKAGE_PREFIX}-arpack"
          "${MINGW_PACKAGE_PREFIX}-openblas"
-         "${MINGW_PACKAGE_PREFIX}-superlu"
-         "${MINGW_PACKAGE_PREFIX}-arpack")
+         "${MINGW_PACKAGE_PREFIX}-superlu")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja")
 install=${_realname}-${MSYSTEM}.install
 source=(https://sourceforge.net/projects/arma/files/${_realname}-${pkgver}.tar.xz
         0001-mingw-config-fix.patch
-        0002-fix-pkgconfig-file.patch)
+        0002-fix-pkgconfig-file.patch
+        0003-accept-superlu-greater-than-5.patch)
 sha256sums=('2495815cf9d130f70fffb6a12733d0dcaf86cbaac51e8b4b82ad25183eda1dd5'
             'a2d0b9bbdc5a5a2006bf2a56bb2041784d576cdd5c60b9cef1b158cfb0468ae8'
-            '830adb017e12c0e90671471dc6870a28ee21755a55e95280a04f73c2d65d665b')
+            '830adb017e12c0e90671471dc6870a28ee21755a55e95280a04f73c2d65d665b'
+            '128c27427e4ec789ff849bd2b686830a1dfbb6f58f8e997e5028b55254d73341')
 
 # Helper macros to help make tasks easier #
 apply_patch_with_msg() {
@@ -40,7 +42,8 @@ prepare() {
 
   apply_patch_with_msg \
     0001-mingw-config-fix.patch \
-    0002-fix-pkgconfig-file.patch
+    0002-fix-pkgconfig-file.patch \
+    0003-accept-superlu-greater-than-5.patch
 }
 
 build() {
