--- a/mingw-w64-glib-networking/PKGBUILD
+++ b/mingw-w64-glib-networking/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=glib-networking
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=2.80.0
+pkgver=2.80.1
 pkgrel=1
 pkgdesc="Network-related GIO modules for glib (mingw-w64)"
 arch=(any)
@@ -15,6 +15,7 @@ msys2_references=(
 license=('spdx:LGPL-2.1-or-later')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-meson"
+             "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-gettext-tools"
              "${MINGW_PACKAGE_PREFIX}-pkgconf")
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
@@ -27,7 +28,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
 replaces=("${MINGW_PACKAGE_PREFIX}-glib-openssl")
 conflicts=("${MINGW_PACKAGE_PREFIX}-glib-openssl")
 source=("https://download.gnome.org/sources/${_realname}/${pkgver%.*}/${_realname}-${pkgver}.tar.xz")
-sha256sums=('d8f4f1aab213179ae3351617b59dab5de6bcc9e785021eee178998ebd4bb3acf')
+sha256sums=('b80e2874157cd55071f1b6710fa0b911d5ac5de106a9ee2a4c9c7bee61782f8e')
 
 build() {
   mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
