libutf8proc: update to 2.10.0

--- a/mingw-w64-libutf8proc/PKGBUILD
+++ b/mingw-w64-libutf8proc/PKGBUILD
@@ -4,11 +4,11 @@ _basname=utf8proc
 _realname=lib${_basname}
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=2.9.0
+pkgver=2.10.0
 pkgrel=1
 pkgdesc="C library for processing UTF-8 encoded Unicode strings (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'archlinux: libutf8proc'
 )
@@ -18,8 +18,8 @@ license=('custom')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja")
-source=("https://github.com/JuliaStrings/utf8proc/releases/download/v${pkgver}/utf8proc-${pkgver}.tar.gz")
-sha256sums=('bd215d04313b5bc42c1abedbcb0a6574667e31acee1085543a232204e36384c4')
+source=("https://github.com/JuliaStrings/utf8proc/archive/refs/tags/v${pkgver}.tar.gz")
+sha256sums=('6f4f1b639daa6dca9f80bc5db1233e9cbaa31a67790887106160b33ef743f136')
 
 build() {
   declare -a extra_config
@@ -29,7 +29,6 @@ build() {
     extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
   fi
 
-  [[ -d "${srcdir}"/build-${CARCH}-shared ]] && rm -rf "${srcdir}"/build-${CARCH}-shared
   mkdir -p "${srcdir}"/build-${CARCH}-shared && cd "${srcdir}"/build-${CARCH}-shared
 
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
@@ -42,8 +41,8 @@ build() {
 
   ${MINGW_PREFIX}/bin/cmake.exe --build ./
 
-  [[ -d "${srcdir}"/build-${CARCH}-static ]] && rm -rf "${srcdir}"/build-${CARCH}-static
   mkdir -p "${srcdir}"/build-${CARCH}-static && cd "${srcdir}"/build-${CARCH}-static
+
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
     ${MINGW_PREFIX}/bin/cmake.exe \
       -G'Ninja' \
