openlibm: update to 0.8.5

--- a/mingw-w64-openlibm/PKGBUILD
+++ b/mingw-w64-openlibm/PKGBUILD
@@ -3,11 +3,11 @@
 _realname=openlibm
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=0.8.4
+pkgver=0.8.5
 pkgrel=1
 pkgdesc="High quality system independent, portable, open source libm implementation (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_repository_url='https://github.com/JuliaMath/openlibm'
 url='https://openlibm.org'
 license=('spdx:MIT')
@@ -15,7 +15,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc")
 source=("${_realname}-${pkgver}.tar.gz::https://github.com/JuliaMath/${_realname}/archive/v${pkgver}.tar.gz"
         "0001-openlibm-fix-pkgconfig-file.patch")
-sha256sums=('c0bac12a6596f2315341790a7f386f9162a5b1f98db9ec40d883fce64e231942'
+sha256sums=('d380c2d871f6dc16e22893569d57bda9121742cc8f6534510526e5278867c6cf'
             'e3f2974f26d1ea5b548b153408959f3f53ab5d920dec6b94fb69e75654a635f7')
 
 # Helper macros to help make tasks easier #
