--- a/mingw-w64-template-glib/PKGBUILD
+++ b/mingw-w64-template-glib/PKGBUILD
@@ -3,10 +3,10 @@
 _realname=template-glib
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=3.36.2
+pkgver=3.36.3
 pkgrel=1
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 pkgdesc="A templating library for GLib (mingw-w64)"
 depends=("${MINGW_PACKAGE_PREFIX}-glib2"
          "${MINGW_PACKAGE_PREFIX}-gobject-introspection-runtime")
@@ -17,14 +17,12 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-meson"
              "${MINGW_PACKAGE_PREFIX}-vala"
              "${MINGW_PACKAGE_PREFIX}-gobject-introspection"
              "${MINGW_PACKAGE_PREFIX}-gtk-doc")
-options=('!strip' 'debug')
-license=("LGPL 2.1")
-url="https://www.gnome.org/"
+license=('spdx:LGPL-2.1-or-later')
+url="https://gitlab.gnome.org/GNOME/template-glib"
 source=(https://download.gnome.org/sources/${_realname}/${pkgver%.*}/${_realname}-${pkgver}.tar.xz)
-sha256sums=('0020f3a401888ce763b3a17508c2f58e91972a483a0c547afdb7ccbe25619948')
+sha256sums=('d528b35b2cf90e07dae50e25e12fbadb0eb048f57fd5151cf9f6e98cce1df20e')
 
 build() {
-  [[ -d "${srcdir}/build-${MSYSTEM}" ]] && rm -rf "${srcdir}/build-${MSYSTEM}"
   mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
 
   MSYS2_ARG_CONV_EXCL="--prefix=" \
