--- a/mingw-w64-zed/PKGBUILD
+++ b/mingw-w64-zed/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=zed
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.167.2
+pkgver=0.168.2
 pkgrel=1
 pkgdesc="A high-performance, multiplayer code editor (mingw-w64)"
 arch=('any')
@@ -42,15 +42,11 @@ fi
 source=("git+${msys2_repository_url}.git#tag=v${pkgver}"
         "zstd-sys.tar.gz::https://crates.io/api/v1/crates/zstd-sys/2.0.13+zstd.1.5.6/download"
         "zed-dont-vendor-cargo-about.patch"
-        "zstd-sys-remove-statik.patch"
-        "https://github.com/zed-industries/zed/commit/298b9df589c2be910676b59cb8213f98a8396fed.patch"
-        "https://github.com/zed-industries/zed/commit/95911aaa1450b6e613139298b676e15cdb928ec1.patch")
-sha256sums=('ee0e69446c097a502c1035a07f854abe87cded05d9aa994bf00b5af86ee0938c'
+        "zstd-sys-remove-statik.patch")
+sha256sums=('de4efb83d76a21cc809da202fad17b10c11a5fca642113156b938618747c7a38'
             '38ff0f21cfee8f97d94cef41359e0c89aa6113028ab0291aa8ca0038995a95aa'
             'b126b7a9e3cc8d3d68c49dbfc184d54691b10172dbfd3272d4c2f43424cfca5b'
-            '48f4900ceb02d3aaf9a1020f33d56629156e96759f456c0e7ca18bfcf910767b'
-            '42bee2aa82ba73a4939b028c800529ad005607a4abdf372a348bf02851034b8c'
-            'acff5a34927c4fb611e9f866fd2d339a737aecd1e2594eb4ff47e30b324b24ac')
+            '48f4900ceb02d3aaf9a1020f33d56629156e96759f456c0e7ca18bfcf910767b')
 
 prepare() {
   cd "${_realname}"
@@ -59,10 +55,6 @@ prepare() {
 
   # use system cargo about to generate license file
   patch -Np1 -i "../zed-dont-vendor-cargo-about.patch"
-  # backport https://github.com/zed-industries/zed/pull/20853
-  patch -Np1 -i "../298b9df589c2be910676b59cb8213f98a8396fed.patch"
-  # backport https://github.com/zed-industries/zed/pull/22414 (requires previous patch)
-  patch -Np1 -i "../95911aaa1450b6e613139298b676e15cdb928ec1.patch"
   # link system deps dynamically
   patch -d "../zstd-sys-2.0.13+zstd.1.5.6" -i "../zstd-sys-remove-statik.patch"
   # use patched *-sys crates
