eza: update to 0.20.16

--- a/mingw-w64-eza/PKGBUILD
+++ b/mingw-w64-eza/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=eza
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.20.15
+pkgver=0.20.16
 pkgrel=1
 pkgdesc="A modern, maintained replacement for ls (mingw-w64)"
 arch=('any')
@@ -22,8 +22,10 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
              'git')
 optdepends=("${MINGW_PACKAGE_PREFIX}-ttf-font-nerd: for file icons")
 options=('!strip')
-source=("${_realname}::git+${msys2_repository_url}.git#tag=v${pkgver}")
-sha256sums=('e9be32f667fa9b3e76f42ef8736463c87ee179a47c5ae4e3ba1cc74adfad5faa')
+source=("${_realname}::git+${msys2_repository_url}.git#tag=v${pkgver}"
+        "https://github.com/eza-community/eza/commit/7241ea4d128ca47b8f5e756a65fa3d4f1d5b5ce7.patch")
+sha256sums=('7f34210712b40a4e6815450a3518459cbf00dd0ea21f0abced7b6c870738ac9c'
+            'ef387f0f9848a387bae1b412e2586bed164050a8bcdaac865b591a3b1691ffcd')
 
 _env() {
   export LIBGIT2_NO_VENDOR=1
@@ -33,6 +35,9 @@ _env() {
 
 prepare() {
   cd "${_realname}"
+
+  # revert git2 update to support libgit2 1.8.x
+  patch -R -p1 -i ../7241ea4d128ca47b8f5e756a65fa3d4f1d5b5ce7.patch
 
   rm rust-toolchain.toml
   cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
