keepawake: rebuild drop libgit2 from depends; fix build

--- a/mingw-w64-keepawake/PKGBUILD
+++ b/mingw-w64-keepawake/PKGBUILD
@@ -5,7 +5,7 @@ pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-lib${_realname}")
 pkgver=0.5.1
-pkgrel=2
+pkgrel=3
 pkgdesc="Keep your computer awake (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -16,23 +16,20 @@ msys2_references=(
 )
 license=('spdx:MIT')
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
-             "${MINGW_PACKAGE_PREFIX}-cargo-c"
-             "${MINGW_PACKAGE_PREFIX}-pkgconf"
-             "${MINGW_PACKAGE_PREFIX}-libgit2")
+             "${MINGW_PACKAGE_PREFIX}-cargo-c")
 options=('!strip') # done while building
 source=("https://github.com/segevfiner/keepawake-rs/archive/v${pkgver}/${_realname}-rs-${pkgver}.tar.gz")
 sha256sums=('06bfc2ce38a6d06e54fc156bd20afa08ae687b6075d9a4ceb123ec935e8c235a')
 
 prepare() {
-  cd "${srcdir}/${_realname}-rs-${pkgver}"
+  cd "${_realname}-rs-${pkgver}"
 
-  export LIBZ_SYS_STATIC=0
-  export LIBGIT2_NO_VENDOR=1
+  cargo update -p time -p cc
   cargo fetch --locked
 }
 
 build() {
-  cd "${srcdir}/${_realname}-rs-${pkgver}"
+  cd "${_realname}-rs-${pkgver}"
 
   cargo build --release --frozen --features bin
 
@@ -41,13 +38,13 @@ build() {
 }
 
 check() {
-  cd "${srcdir}/${_realname}-rs-${pkgver}"
+  cd "${_realname}-rs-${pkgver}"
 
   cargo test --release --frozen --features bin
 }
 
 package_keepawake() {
-  cd "${srcdir}/${_realname}-rs-${pkgver}"
+  cd "${_realname}-rs-${pkgver}"
 
   cargo install \
     --frozen \
@@ -57,7 +54,7 @@ package_keepawake() {
     --path . \
     --root "${pkgdir}${MINGW_PREFIX}"
 
-  local _complete="./target/release/keepawake --completions"
+  local _complete="target/release/keepawake --completions"
   $_complete bash | install -Dm644 /dev/stdin "${pkgdir}${MINGW_PREFIX}/share/bash-completion/completions/keepawake"
   $_complete fish | install -Dm644 /dev/stdin "${pkgdir}${MINGW_PREFIX}/share/fish/vendor_completions.d/keepawake.fish"
   $_complete zsh | install -Dm644 /dev/stdin "${pkgdir}${MINGW_PREFIX}/share/zsh/site-functions/_keepawake"
@@ -65,7 +62,7 @@ package_keepawake() {
 }
 
 package_libkeepawake() {
-  cd "${srcdir}/${_realname}-rs-${pkgver}"
+  cd "${_realname}-rs-${pkgver}"
 
   pkgdesc+=" (C API)"
 
