qgis: update to 3.40.2

--- a/mingw-w64-qgis/PKGBUILD
+++ b/mingw-w64-qgis/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=qgis
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=3.40.0
-pkgrel=4
+pkgver=3.40.2
+pkgrel=1
 pkgdesc='Geographic Information System (GIS) that supports vector, raster & database formats (mingw-w64)'
 arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
@@ -65,8 +65,8 @@ source=("https://qgis.org/downloads/${_realname}-$pkgver.tar.bz2"
         "003-fix-build-qgis-qt6-on-mingw.patch"
         "004-fix-customwidgets-install.patch"
         "005-fix-build-untwine-on-mingw.patch")
-sha256sums=('14a6c224ad6519b807f4c2cbdd3697c40fd1e114d439eef8b3ed11e7dc5260c3'
-            '9acb0f5fe3e486580debe9434c4afd98e0d8b862e0c86837d9aaf12472a7d119'
+sha256sums=('3eddc2cb93f339dabb4c90d94ea31d5d1845c21542e8317ec2cbe3e95d124b9a'
+            '82d8839992f08a26ea7caf5e908e5f4111806df211ae5cec91e2b86e49b43e75'
             '47e6471b92b85d97e58b617da326c15622c01786c19eb7d4d5814483becb75e4'
             '78b67f0b50823e64333cd781c0d05bc748d352ffd29fe497b5b5f34b14896ea4'
             '216dc67ef707f2e918afb7d190c9ea75c11065dea0d23d11b94cab5d8463bac3'
@@ -115,7 +115,7 @@ build() {
   CXXFLAGS+=" -Wno-deprecated-declarations"
 
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
-  ${MINGW_PREFIX}/bin/cmake \
+  ${MINGW_PREFIX}/bin/cmake -Wno-dev \
     -G"Ninja" \
     -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX} \
     -DCMAKE_CXX_STANDARD=17 \
@@ -142,9 +142,6 @@ build() {
     -DWITH_QWTPOLAR=ON \
     -DENABLE_TESTS=OFF \
     -DWITH_GRASS=OFF \
-    -DHAS_KDE_QT5_PDF_TRANSFORM_FIX=TRUE \
-    -DHAS_KDE_QT5_SMALL_CAPS_FIX=TRUE \
-    -DHAS_KDE_QT5_FONT_STRETCH_FIX=TRUE \
     ../${_realname}-$pkgver
 
   ${MINGW_PREFIX}/bin/cmake --build .
