rust: update to 1.84.0

--- a/mingw-w64-rust/PKGBUILD
+++ b/mingw-w64-rust/PKGBUILD
@@ -8,8 +8,8 @@ if [[ $MINGW_PACKAGE_PREFIX == *-clang-* ]]; then
   _bootstrapping=no
 fi
 
-#rust_dist_server=https://static.rust-lang.org/dist
-rust_dist_server=https://dev-static.rust-lang.org/dist/2025-01-07
+rust_dist_server=https://static.rust-lang.org/dist
+#rust_dist_server=https://dev-static.rust-lang.org/dist/2025-01-07
 
 _realname=rust
 pkgbase=mingw-w64-${_realname}
@@ -51,8 +51,8 @@ source=("${rust_dist_server}/${_realname}c-${pkgver}-src.tar.gz"{,.asc}
         "0008-disable-self-contained-for-gnu-targets.patch"
         # remove after 1.85.0 update
         "0013-update-psm.patch"
-        "0014-update-cc-for-library.patch"
-        "https://github.com/rust-lang/rust/pull/134240.patch")
+        "0014-update-cc.patch"
+        "134240.patch")
 noextract=(${_realname}c-${pkgver}-src.tar.gz)
 sha256sums=('15cee7395b07ffde022060455b3140366ec3a12cbbea8f1ef2ff371a9cca51bf'
             'SKIP'
@@ -63,7 +63,7 @@ sha256sums=('15cee7395b07ffde022060455b3140366ec3a12cbbea8f1ef2ff371a9cca51bf'
             '56882f1a0f1404c10c7726d6cc37444f2b343e72b969badfcb43760f80db0f32'
             '98bc3f2bd7371a5b8d14fd7b03bf05574e206d1d9e52bcfbe66d71398504da3c'
             '602481687fa580eb426c619f673128702c800e91d4f476fcbaf48b86a7a1b963'
-            'c34cfe938681426db215d6cbf42aa0bd6d43d10fba017a40ff0ec09ea9342c40'
+            '482bf5599150faba207dfb389e8d1c4a6a6b2b7574e1ec0c2239563b7e2b0c35'
             '58eaf7e10272395e7f23e95a292bd09f1090663b094fbab451a835239cbd3365')
 validpgpkeys=('108F66205EAEB0AAA8DD5E1C85AB96E6FA1BE5FE'  # Rust Language (Tag and Release Signing Key) <rust-key@rust-lang.org>
               '474E22316ABF4785A88C6E8EA2C794A986419D8A'  # Tom Stellard <tstellar@redhat.com>
@@ -116,13 +116,12 @@ prepare() {
       0004-compiler-Use-wasm-ld-for-wasm-targets.patch
   fi
 
-  # partial backport of https://github.com/rust-lang/rust/commit/e00bfa6595ad6809cf91222a6ce902ce11af1f57
-  # to fix compilation for `wasm32v1-none` target
+  # update cc dependency for library and bootstrap to fix compilation for `wasm32v1-none` target
   apply_patch_with_msg \
-    0014-update-cc-for-library.patch
+    0014-update-cc.patch
 
   # backport of https://github.com/rust-lang/rust/pull/134240 to remove unneded `rust-objcopy.exe`
-  #  from rust sysroot
+  # from rust sysroot
   apply_patch_with_msg \
     134240.patch
 }
@@ -203,7 +202,7 @@ build() {
   if [[ ${CARCH} != i686 ]]; then
     # move wasm32-* targets out of the way for splitting
     mkdir -p dest-wasm${MINGW_PREFIX}/lib/rustlib
-    mv dest-rust${MINGW_PREFIX}/lib/rustlib/wasm32-* dest-wasm${MINGW_PREFIX}/lib/rustlib
+    mv dest-rust${MINGW_PREFIX}/lib/rustlib/wasm32* dest-wasm${MINGW_PREFIX}/lib/rustlib
   fi
 
   # move src out of the way for splitting
