gpgme: Fix CMake files.

--- a/mingw-w64-gpgme/PKGBUILD
+++ b/mingw-w64-gpgme/PKGBUILD
@@ -10,7 +10,7 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
            "${MINGW_PACKAGE_PREFIX}-qgpgme-qt6" \
            "${MINGW_PACKAGE_PREFIX}-python-gpgme"))
 pkgver=1.23.2
-pkgrel=9
+pkgrel=10
 pkgdesc="A C wrapper library for GnuPG (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -21,7 +21,7 @@ msys2_references=(
   "cpe: cpe:/a:gnu:gpgme"
   "cpe: cpe:/a:gnupg:gpgme"
 )
-license=('spdx: LGPL-2.1-or-later OR GPL-2.0-or-later')
+license=('spdx:LGPL-2.1-or-later OR GPL-2.0-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-glib2"
          "${MINGW_PACKAGE_PREFIX}-gnupg"
          "${MINGW_PACKAGE_PREFIX}-libassuan"
@@ -66,7 +66,7 @@ sha256sums=('9499e8b1f33cccb6815527a1bc16049d35a6198a6c5fae0185f2bd561bce5224'
             '0b0d511f9d47844d3fd806864310d9abbeb1285d43f6ffa33babf55a4a410458'
             'ace3d5166372e0422a625f76a2890d70f2916d9239ade74e58bd23077e9c1c6b'
             '5e8e7e773a09ed1e1724c9d7216eaaecce52af49152513366026a2fa3245d762'
-            '2a390489e8d192ca1b182458f29cbc5d0b78524b041afeee91bde6001150b5c2'
+            '9b0bae58939c8976a7d70b5620c8bc2cc3cc59c9e7cd4e3e5c93eb9c15f8fc41'
             'a110b40d146a7c561140b68831027f61d2132e1069d2476b2e0a4034bc54fae1')
 
 _apply_patch_with_msg() {
@@ -167,8 +167,10 @@ package_gpgme() {
   cd "${srcdir}"/build-${MSYSTEM}
   make DESTDIR="${pkgdir}" install
 
-  install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
-  install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING.LESSER" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING.LESSER"
+  install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING" \
+    "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
+  install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING.LESSER" \
+    "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING.LESSER"
 
   local PREFIX_WIN=$(cygpath -wm ${MINGW_PREFIX})
   sed -s "s|${PREFIX_WIN}|${MINGW_PREFIX}|g" -i "${pkgdir}${MINGW_PREFIX}/bin/gpgme-config"
