wasi-libc: update to 0+410+574b88da

--- a/mingw-w64-wasi-libc/PKGBUILD
+++ b/mingw-w64-wasi-libc/PKGBUILD
@@ -1,9 +1,9 @@
 _realname=wasi-libc
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0+392+b9ef79d7
-_commit=b9ef79d7dbd47c6c5bafdae760823467c2f60b70 # tags/wasi-sdk-24
-pkgrel=2
+pkgver=0+410+574b88da
+_commit=574b88da481569b65a237cb80daf9a2d5aeaf82d # tags/wasi-sdk-25
+pkgrel=1
 epoch=1
 pkgdesc="WASI libc implementation for WebAssembly (mingw-w64)"
 arch=('any')
@@ -18,11 +18,11 @@ makedepends=(
   "${MINGW_PACKAGE_PREFIX}-llvm"
   'git'
 )
-options=(!strip)
+options=('!strip')
 source=("git+$url.git#commit=${_commit}")
-b2sums=('2b5ffd88ba75a484c9e4bb665013e7bed0f2e4aaf13473ea4711db2958a80c172d4dca0c40f28c813a58bf2a549305a183ae8b31b95d0a772e0f6c1a9f06776e')
+sha256sums=('6749d76c05778fe53bf3ec6a2cb810dac4d8ccdc295d63e8554f1f899536df84')
 
-prepare() {
+pkgver() {
   cd "${_realname}"
 
   printf "0+%s+%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short HEAD)"
