python-cx-freeze: drop mingw32

--- a/mingw-w64-python-cx-freeze/PKGBUILD
+++ b/mingw-w64-python-cx-freeze/PKGBUILD
@@ -10,7 +10,7 @@ pkgver=7.2.8
 pkgrel=1
 pkgdesc="Creates standalone executables from Python scripts, with the same performance (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64')
 url="https://github.com/marcelotduarte/cx_Freeze/"
 msys2_references=(
   'pypi: cx-Freeze'
