ossia-score: update to 3.4.0

--- a/mingw-w64-ossia-score/PKGBUILD
+++ b/mingw-w64-ossia-score/PKGBUILD
@@ -3,11 +3,11 @@
 _realname=ossia-score
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=3.3.2
+pkgver=3.4.0
 pkgrel=1
 pkgdesc="ossia score, an interactive sequencer for the intermedia arts"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64')
 url="https://ossia.io"
 msys2_repository_url="https://github.com/ossia/score"
 license=('spdx:GPL-3.0-or-later')
@@ -42,7 +42,7 @@ makedepends=(
   "git"
 )
 source=("https://github.com/ossia/score/releases/download/v${pkgver}/ossia.score-${pkgver}-src.tar.xz")
-sha512sums=('a2123644d1f249415acc244b1de7478491c6e3191170c023959791115e1114d8acadc648bc7245cbdcffb98b6fa6aa9e2a94234faff57323a2d8146f243dcec2')
+sha512sums=('657dc6c54686901f18c4a303d33e070355754c7913c5efbf044d820836338e3b3b9941d1510311a7d0e8b45156def1144e8d8b69cad03d46c31ea7b7afb79b85')
 noextract=(ossia.score-${pkgver}-src.tar.xz)
 
 prepare() {
