frontistr: no trilinos in clangarm64.

--- a/mingw-w64-frontistr/PKGBUILD
+++ b/mingw-w64-frontistr/PKGBUILD
@@ -4,7 +4,7 @@ _realname=frontistr
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=5.6
-pkgrel=1
+pkgrel=2
 pkgdesc='Open-Source Large-Scale Parallel FEM Program for Nonlinear Structural Analysis (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -26,9 +26,9 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              $([[ ${CARCH} == aarch64 ]] || echo \
                "${MINGW_PACKAGE_PREFIX}-msmpi" \
                "${MINGW_PACKAGE_PREFIX}-parmetis" \
-               "${MINGW_PACKAGE_PREFIX}-scalapack")
-             "${MINGW_PACKAGE_PREFIX}-seacas"
-             "${MINGW_PACKAGE_PREFIX}-trilinos")
+               "${MINGW_PACKAGE_PREFIX}-scalapack" \
+               "${MINGW_PACKAGE_PREFIX}-trilinos")
+             "${MINGW_PACKAGE_PREFIX}-seacas")
 source=("https://github.com/${_realname}/${_realname}/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
         "001-fix-build-with-flang.patch")
 sha256sums=('e818698f61c4482151e7aa9d27cabfa14c8c1643a99511ec45659b883e78c742'
@@ -50,9 +50,9 @@ build() {
   fi
 
   if [[ ${CARCH} != aarch64 ]]; then
-    _extra_config+=("-DWITH_MPI=ON")
+    _extra_config+=("-DWITH_MPI=ON" "-DWITH_ML=ON")
   else
-    _extra_config+=("-DWITH_MPI=OFF")
+    _extra_config+=("-DWITH_MPI=OFF" "-DWITH_ML=OFF")
   fi
 
   if [[ ${MINGW_PACKAGE_PREFIX} != *-clang-* ]]; then
@@ -64,7 +64,6 @@ build() {
       -GNinja \
       -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX} \
       "${_extra_config[@]}" \
-      -DWITH_ML=ON \
       ../${_realname}-${pkgver}
 
   ${MINGW_PREFIX}/bin/cmake --build .
