stlink: Update to 1.8.0
* refresh patches
* split out general build fixes out of the libusb patch
* add patch for relocation of new config files

Fixes #23063

--- a/mingw-w64-stlink/PKGBUILD
+++ b/mingw-w64-stlink/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=stlink
 pkgbase="mingw-w64-${_realname}"
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=1.7.0
-pkgrel=2
+pkgver=1.8.0
+pkgrel=1
 pkgdesc='Firmware programmer for STM32 STLINK v1/v2 protocol'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -15,13 +15,19 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja")
 source=("https://github.com/stlink-org/stlink/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
-        "0001-cmake-find-libusb.patch")
-sha256sums=('57ec1214905aedf59bee7f70ddff02316f64fa9ba5a9b6a3a64952edc5b65855'
-            '6b1f278eef5f496c7dfb958089cb65c793b80a52c16c36733803e94c05daa51f')
+        "0001-cmake-find-libusb.patch"
+        "0002-cmake-remove-broken-things.patch"
+        "0003-chip-config-relocate.patch")
+sha256sums=('cff760b5c212c2cc480f705b9ca7f3828d6b9c267950c6a547002cd0a1f5f6ac'
+            '836809f14729f3b272a182b881eae92a5c3e49056f43fb20462da5e1ab9c1580'
+            '9b20ad3109253d1864cea41b1cff07b4aeeb9630a19a2309c728db8aef549d81'
+            'c9b74edc132db86eadc327d8b5e44115800339a207720c1244aa1cdbe0ec996e')
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
   patch -p1 -i "${srcdir}/0001-cmake-find-libusb.patch"
+  patch -p1 -i "${srcdir}/0002-cmake-remove-broken-things.patch"
+  patch -p1 -i "${srcdir}/0003-chip-config-relocate.patch"
 }
 
 build() {
