zycore-c: update to 1.5.1

--- a/mingw-w64-zycore-c/PKGBUILD
+++ b/mingw-w64-zycore-c/PKGBUILD
@@ -4,8 +4,8 @@ _realname=zycore-c
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-docs")
-pkgver=1.5.0
-pkgrel=3
+pkgver=1.5.1
+pkgrel=1
 pkgdesc="Zyan Core Library for C (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -16,7 +16,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-doxygen")
 source=("${url}/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('68e287cb6c95a6dede810d1e4fb2aebf7a09473089570a847e9a2b115ff96ff4')
+sha256sums=('292ec0b30a68a6be416119756238efb5ab34122de80cca884e269e28f6fc126b')
 
 build() {
   declare -a extra_config
@@ -27,7 +27,7 @@ build() {
   fi
 
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
-    "${MINGW_PREFIX}"/bin/cmake.exe \
+    cmake \
       -GNinja \
       -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
       "${extra_config[@]}" \
@@ -35,13 +35,13 @@ build() {
       -S "${_realname}-${pkgver}" \
       -B "build-${MSYSTEM}"
 
-  "${MINGW_PREFIX}"/bin/cmake.exe --build "build-${MSYSTEM}"
+  cmake --build "build-${MSYSTEM}"
 }
 
 package_zycore-c() {
-  DESTDIR="${pkgdir}" "${MINGW_PREFIX}"/bin/cmake.exe --install "build-${MSYSTEM}"
+  DESTDIR="${pkgdir}" cmake --install "build-${MSYSTEM}"
 
-  install -Dm644 "${srcdir}/${_realname}-${pkgver}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
+  install -Dm644 "${_realname}-${pkgver}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
 
   # split docs
   mkdir -p "dest${MINGW_PREFIX}/share/"
