drop libgit2 from depends for some rust packages to reduce build time for #23050

--- a/mingw-w64-jj/PKGBUILD
+++ b/mingw-w64-jj/PKGBUILD
@@ -5,7 +5,7 @@ pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-docs")
 pkgver=0.25.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Jujutsu (an experimental VCS) (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -21,7 +21,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-openssl"
              'git')
-depends=("${MINGW_PACKAGE_PREFIX}-libgit2"
+depends=(#"${MINGW_PACKAGE_PREFIX}-libgit2"
          "${MINGW_PACKAGE_PREFIX}-libssh2"
          "${MINGW_PACKAGE_PREFIX}-zstd")
 source=("git+${url}.git#tag=v${pkgver}"
@@ -33,7 +33,8 @@ sha256sums=('81a4fba33ef41385f489eb2ddec66deaa7e04df13a79f264c924666551c727c4'
 
 _env() {
   export OPENSSL_NO_VENDOR=1
-  export LIBGIT2_NO_VENDOR=1
+  # not compatible with libgit2 1.9+
+  # export LIBGIT2_NO_VENDOR=1
   export ZSTD_SYS_USE_PKG_CONFIG=1
   export LIBSSH2_SYS_USE_PKG_CONFIG=1
 }
@@ -88,7 +89,7 @@ package_jj() {
 
   install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
 
-  local _complete="./target/release/jj util completion"
+  local _complete="target/release/jj util completion"
   $_complete bash | install -Dm644 /dev/stdin "${pkgdir}${MINGW_PREFIX}/share/bash-completion/completions/jj"
   $_complete fish | install -Dm644 /dev/stdin "${pkgdir}${MINGW_PREFIX}/share/fish/vendor_completions.d/jj.fish"
   $_complete zsh | install -Dm644 /dev/stdin "${pkgdir}${MINGW_PREFIX}/share/zsh/site-functions/_jj"
