--- a/mingw-w64-rav1e/PKGBUILD
+++ b/mingw-w64-rav1e/PKGBUILD
@@ -4,7 +4,7 @@ _realname=rav1e
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=0.7.1
-pkgrel=2
+pkgrel=3
 pkgdesc='An AV1 encoder focused on speed and safety (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -16,8 +16,6 @@ url=https://github.com/xiph/rav1e/
 license=('spdx:BSD-2-Clause')
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
              "${MINGW_PACKAGE_PREFIX}-cargo-c"
-             "${MINGW_PACKAGE_PREFIX}-pkgconf"
-             "${MINGW_PACKAGE_PREFIX}-libgit2"
              $([[ "${CARCH}" == "aarch64"  ]] || echo "${MINGW_PACKAGE_PREFIX}-nasm"))
 source=("https://github.com/xiph/rav1e/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
         "https://github.com/xiph/rav1e/releases/download/v${pkgver}/Cargo.lock")
@@ -26,17 +24,15 @@ sha256sums=('da7ae0df2b608e539de5d443c096e109442cdfa6c5e9b4014361211cf61d030c'
 
 prepare() {
   cp Cargo.lock "${_realname}-${pkgver}"
-  cd "${srcdir}/${_realname}-${pkgver}"
+  cd "${_realname}-${pkgver}"
 
-  export LIBZ_SYS_STATIC=0
-  export LIBGIT2_NO_VENDOR=1
-  export WINAPI_NO_BUNDLED_LIBRARIES=1
   cargo fetch --locked
 }
 
 build() {
-  cd "${srcdir}/${_realname}-${pkgver}"
+  cd "${_realname}-${pkgver}"
 
+  export WINAPI_NO_BUNDLED_LIBRARIES=1
   cargo build \
     --release \
     --frozen \
@@ -50,7 +46,7 @@ build() {
 }
 
 check() {
-  cd "${srcdir}/${_realname}-${pkgver}"
+  cd "${_realname}-${pkgver}"
 
   cargo test \
     --release \
@@ -58,7 +54,7 @@ check() {
 }
 
 package() {
-  cd "${srcdir}/${_realname}-${pkgver}"
+  cd "${_realname}-${pkgver}"
 
   cargo install \
     --frozen \
